--- a/cupcake-shop.html
+++ b/cupcake-shop.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="flashy">Welcome to Moxie's</h1>
-    <img src="" alt="picture of cupcake shop">
+    <img src="img/bestcupcake.jpg" alt="picture of cupcake shop">
     <h3 class="best">The standard Lorem Ipsum passage, used since the 1500s</h3>
     <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     <h3>Section 1.10.32 of "de Finibus Bonorum et Malorum", written by Cicero in 45 BC</h3>
